# rpi

./: Makefile  app.py  gui_app.py  pyproject.toml  rpi-rx5808-stream.py  rpi-rx5808-stream.service  setup.py
rx5808_gui/: __init__.py  app.py  config.py  controller.py  scanner.py  video.py
